--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '3.1.0.RELEASE'
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.0'
 	runtime('com.h2database:h2')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
