--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 server.port=8181
+allowed.origins=http://localhost:8080
+
+spring.jpa.open-in-view=false
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.gtchoi.todolistbackend=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
