--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,20 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	developmentOnly
+	runtimeClasspath {
+		extendsFrom developmentOnly
+	}
+}
+
 dependencies {
+	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
+	implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 	implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '3.1.0.RELEASE'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.0'
 	runtime('com.h2database:h2')
