--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ configurations {
 
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.2'
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
