separated logback configuration based on @Profile.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,2 @@
-# 배포할 때 java name.jar --spring.profiles.active=production
-allowed.origins=http://localhost
-logging.level.com.gtchoi.todolistbackend=WARN
-
+allowed.origins=http://www.todolistgtchoi.be.s3-website.ap-northeast-2.amazonaws.com
+logging.path=logs
