content negotiation, error response, jaxb. * accept header, format parameter, 확장자로 json 응답 xml 응답 선택가능. * ErrorResponse.java, HTTP status 값 추가 * REST API XML 응답 요청시, JAXB parser 사용함.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,2 +1,4 @@
 allowed.origins=http://localhost:8080,http://localhost
-spring.jpa.open-in-view=false
+
+server.error.include-exception=true
+server.error.include-stacktrace=always
