--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 	implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '3.1.0.RELEASE'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.0'
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 	runtime('com.h2database:h2')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
