netlify domain 허용

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,2 @@
-allowed.origins=http://www.todolistgtchoi.be.s3-website.ap-northeast-2.amazonaws.com
+allowed.origins=https://gtchoi-todolist.netlify.app
 logging.path=logs
