google oauth property, README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.open-in-view=false
 
 server.port=8181
 spring.data.web.pageable.default-page-size=50
+
+google.oauth.redirect-uri=http://localhost:8080/google-signin-callback
